--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.24",
     "bulma": "^0.7.5",
     "nuxt": "^2.0.0",
+    "v-mask": "^1.3.3",
     "vue": "^2.6.10",
     "vue-text-mask": "^6.1.2"
   },
